District map page changes

--- a/Client/Pages/DistrictMapPage.razor
+++ b/Client/Pages/DistrictMapPage.razor
@@ -2,10 +2,19 @@
 
 
 <DefaultHeader Title="District Map" Breadcrumb="District Map" />
+<div class="container-xxl py-5">
+    <div class="container">
+        <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+            <h6 class="text-primary text-uppercase">// Steve's Community //</h6>
+            <h1 class="mb-5">District Map</h1>
+        </div>
+        <div class="row g-4">
+            <img class ="img-fluid" src="/img/district-map.jpg" />
+            <p>This is the updated map for the 25th District. For a more personalized look, please go to <a href="https://apps.legislature.ky.gov/findyourlegislator/findyourlegislator.html" data-wpel-link="external" target="_blank" rel="external noopener noreferrer">here</a>.&nbsp;</p>
 
-<img decoding="async" width="640" height="427" src="https://stevebratcher.com/wp-content/uploads/2022/07/H25-HH002C03-22RS-HB2-HCS1-1024x683.jpg" class="attachment-large size-large wp-image-260" alt="" loading="lazy" srcset="https://stevebratcher.com/wp-content/uploads/2022/07/H25-HH002C03-22RS-HB2-HCS1-1024x683.jpg 1024w, https://stevebratcher.com/wp-content/uploads/2022/07/H25-HH002C03-22RS-HB2-HCS1-300x200.jpg 300w, https://stevebratcher.com/wp-content/uploads/2022/07/H25-HH002C03-22RS-HB2-HCS1-768x512.jpg 768w, https://stevebratcher.com/wp-content/uploads/2022/07/H25-HH002C03-22RS-HB2-HCS1-1536x1024.jpg 1536w, https://stevebratcher.com/wp-content/uploads/2022/07/H25-HH002C03-22RS-HB2-HCS1-2048x1365.jpg 2048w, https://stevebratcher.com/wp-content/uploads/2022/07/H25-HH002C03-22RS-HB2-HCS1-750x500.jpg 750w" sizes="(max-width: 640px) 100vw, 640px">
-
-<p>This is the updated map for the 25th District. For a more personalized look, please go to <a href="https://apps.legislature.ky.gov/findyourlegislator/findyourlegislator.html" data-wpel-link="external" target="_blank" rel="external noopener noreferrer">here</a>.&nbsp;</p>
+        </div>
+    </div>
+</div>
 
 
 
