Reverted home page picture

--- a/Client/Pages/DistrictMapPage.razor
+++ b/Client/Pages/DistrictMapPage.razor
@@ -10,7 +10,7 @@
         </div>
         <div class="row g-4">
             <img class ="img-fluid" src="/img/district-map.jpg" />
-            <p>This is the updated map for the 25th District. For a more personalized look, please go to <a href="https://apps.legislature.ky.gov/findyourlegislator/findyourlegislator.html" data-wpel-link="external" target="_blank" rel="external noopener noreferrer">here</a>.&nbsp;</p>
+            <p>This is the updated map for the 25th District. For a more personalized look, please go to <a href="https://apps.legislature.ky.gov/findyourlegislator/findyourlegislator.html" target="_blank" rel="external noopener noreferrer">here</a>.&nbsp;</p>
 
         </div>
     </div>
