--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -20,7 +20,7 @@
 
                                 </div>
                                 <div class="col-lg-5 d-none d-lg-flex animated zoomIn">
-                                    <img class="img-fluid" style="min-height:80rem; object-fit:cover"src="img/steve-full-body.png" alt="">
+                                    <img class="img-fluid" src="img/carousel-1.png" alt="">
                                 </div>
                             </div>
                         </div>
