--- a/Client/App.razor
+++ b/Client/App.razor
@@ -1,5 +1,6 @@
 ﻿<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
+        <FocusOnNavigate RouteData="@routeData" Selector="nav-item nav-link" />
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
     </Found>
     <NotFound>
